--- a/Web-dev-camp/Bootstrap/Bootstrap4_Code/04_Utilities/index.html
+++ b/Web-dev-camp/Bootstrap/Bootstrap4_Code/04_Utilities/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h1 class="text-center display-1">Utilities</h1>
         <!-- Border -->
-        <h5 class="border border-danger rounded-to">GIVE ME A BORDER</h5>
+        <h5 class="border border-danger rounded-top">GIVE ME A BORDER</h5>
         <h5 class="border-top border-info">GIVE ME A BORDER</h5>
         <h5 class="border border-left-0 border-warning">GIVE ME A BORDER</h5>
         <!-- Padding -->
