--- a/Web-dev-camp/Bootstrap/Bootstrap4_Code/07_Display/index.html
+++ b/Web-dev-camp/Bootstrap/Bootstrap4_Code/07_Display/index.html
@@ -24,7 +24,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
+            <h1 class="display-4 text-center">Hello, world!</h1>
             <p class="lead d-none d-md-block">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis odio debitis voluptatem possimus corrupti labore alias! Ad ipsa, veniam in quo a aperiam obcaecati quae. Blanditiis delectus, corrupti optio voluptatem eum deserunt officiis vitae. Similique amet facere voluptas velit maxime neque, quisquam exercitationem aliquam vitae inventore cumque ad nihil sit expedita fugiat at, quos quae. Aperiam obcaecati aut magni veritatis!</p>
             <hr class="my-4">
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
