--- a/Web-dev-camp/Bootstrap/Bootstrap4_Code/08_Flexbox/index.html
+++ b/Web-dev-camp/Bootstrap/Bootstrap4_Code/08_Flexbox/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <h1 class="text-center display-4">Flexbox</h1>
-        <div class="border border-dark d-flex flex-row justify-content-start align-items-end" style="height: 200px">
+        <div class="border border-dark d-flex flex-row justify-content-lg-start align-items-end" style="height: 200px">
             <button class="btn btn-info btn-lg">LARGE</button>
             <button class="btn btn-primary">SMALL</button>
             <button class="btn btn-warning">SMALL</button>
