--- a/Web-dev-camp/Javascript/basictodo/list.html
+++ b/Web-dev-camp/Javascript/basictodo/list.html
@@ -1,21 +1,18 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Todo List</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="list.js"></script>
+	<title>Todo List</title>
+	<script type="text/javascript" src="todos.js"></script>
 </head>
 <body>
+<h1>Todo List</h1>
 
-    <h1>Todo List</h1>
-    
-    <ul>
-        <li>"new" - Add A Todo</li>
-        <li>"list" - List all Todos</li>
-        <li>"quit" - Quit App</li>
-    </ul>
+<ul>
+	<li>"new" - Add A Todo</li>
+	<li>"list" - List All Todos</li>
+	<li>"delete" - Remove Specific Todo</li>
+	<li>"quit" - Quit App</li>
+</ul>
 
 </body>
 </html>
