--- a/Web-dev-camp/Javascript/DOM/colorchanger.html
+++ b/Web-dev-camp/Javascript/DOM/colorchanger.html
@@ -6,6 +6,13 @@
     <title>Color Changer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
+    <style>
+        .purple {
+            background: purple;
+        }
+    </style>
+
 </head>
 <body>
     <button>CLICK ME</button>
